CMS/Installer/Modulos/Auxiliares/firewall/iptables.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
############### Local ###############
# loopback
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
# DNS
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 8.8.8.8/32 -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -d 8.8.8.8/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
############### Dependencia ###############
# Dependencia - SSH
-A INPUT -s 132.247.1.0/24 -p tcp -m multiport --dports SSHPORT -j fail2ban-s
-A OUTPUT -d 132.247.1.0/24 -p tcp -m tcp --sport SSHPORT -j ACCEPT
# Dependencia - HTTP
-A INPUT -s 132.247.1.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 132.247.1.0/24 -p tcp -m tcp --sport 80 -j ACCEPT
# Dependencia - HTTPS
-A INPUT -s 132.247.1.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 132.247.1.0/24 -p tcp -m tcp --sport 443 -j ACCEPT
############### UNAM ###############
# UNAM - SSH
-A INPUT -s 132.247.0.0/16 -p tcp -m tcp --dport SSHPORT -j ACCEPT
-A OUTPUT -d 132.247.0.0/16 -p tcp -m tcp --sport SSHPORT -j ACCEPT
-A INPUT -s 132.248.0.0/16 -p tcp -m tcp --dport SSHPORT -j ACCEPT
-A OUTPUT -d 132.248.0.0/16 -p tcp -m tcp --sport SSHPORT -j ACCEPT
# UNAM - HTTP
-A INPUT -s 132.247.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 132.247.0.0/16 -p tcp -m tcp --sport 80 -j ACCEPT
-A INPUT -s 132.248.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 132.248.0.0/16 -p tcp -m tcp --sport 80 -j ACCEPT
# UNAM - HTTPS
-A INPUT -s 132.247.0.0/16 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 132.247.0.0/16 -p tcp -m tcp --sport 443 -j ACCEPT
-A INPUT -s 132.248.0.0/16 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 132.248.0.0/16 -p tcp -m tcp --sport 443 -j ACCEPT

############### Publico ###############
# Publico - SSH
-A INPUT -p tcp -m multiport --dports SSHPORT -j fail2ban-s
-A OUTPUT -p tcp -m tcp --sport SSHPORT -j ACCEPT
# Publico - HTTP
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
# Publico - HTTP
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
# Publico - Ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
# Mail - SMTP
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 25 -j ACCEPT
# Mail - IMAP
-A INPUT -p tcp -m tcp --dport 143 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 143 -j ACCEPT
# Mail - IMAP secure 
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 993 -j ACCEPT
# Mail - POP3
-A INPUT -p tcp -m tcp --dport 110 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 110 -j ACCEPT
# Mail - POP3 secure
-A INPUT -p tcp -m tcp --dport 995 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 995 -j ACCEPT
############### RED ###############
# DATABASE
-A INPUT -p tcp -m tcp --dport DBPORT -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport DBPORT -j ACCEPT
